k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-app
  labels:
    app: student-app
