k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  namespace: student-app
  labels:
    app: student-app
spec:
  type: ClusterIP
  selector:
    app: student-app
  ports:
    - name: http
      protocol: TCP
      port: 3333
      targetPort: 3333
